compiler/tests/fail/slh/x86-64/while_wrong_update.jazz
export
fn main() -> reg u64 {
    reg u64 msf;

    msf = #init_msf();

    inline bool b;
    b = msf == 0;
    while (b) {
        msf = #update_msf(!b, msf);
    }

    return msf;
}
